<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.saifniaz.az.azscanner.MainActivity">


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:padding="10dp"
        android:text="@string/welcome1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:text="@string/welcome2"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:textStyle="italic"
        />
    
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/captured"
        android:layout_below="@+id/text2"
        android:layout_above="@id/linear"
        tools:ignore="ContentDescription"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/linear">

        <Button
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/process"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pic"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>
